# ooop_nsu

./: .gitignore  CMakeLists.txt
lab00/: CMakeLists.txt  input.txt  main.cpp  output.csv
lab00b/: input.txt  main.cpp  output.csv
lab01/: CMakeLists.txt  Tritset.cpp  Tritset.h  main.cpp  tests.cpp  trit.cpp  trit.h  tritset.cpp  tritset.h
lab01/tests/: CMakeLists.txt  tests.cpp
lab02/: Blocks.cpp  Blocks.h  CMakeLists.txt  Executor.cpp  Executor.h  IParser.cpp  IParser.h  IValidator.cpp  IValidator.h  Parser.cpp  Parser.h  Validator.cpp  Validator.h  Worker.cpp  Worker.h  main.cpp
lab02/tests/: 0syntax_error  1output.txt  1syntax_error  1workflow_1input.txt  2syntax_error  WorkflowExecutor.out  empty_command  input.txt  input_repeat  no _csed_no_desc  no-i-ocorrect_input_output  no-i-onormal_workflow.txt  no-i-oonly_input  no-i-oonly_output  no_csed  no_desc  order_bad  order_longer  order_repeat
